--- a/bits-logis.html
+++ b/bits-logis.html
@@ -438,7 +438,7 @@
                 <div class="heads-container">
                     <div class="head-card">
                         <div class="head-icon">
-                            <img src="./images/formal_crop.JPG" alt="John Francis C. Villareal" style="display: block; margin: 0 auto; width: 120px; height: 120px; object-fit: cover; border-radius: 50%; border: 4px solid #ff9d00; box-shadow: 0 4px 16px rgba(0,0,0,0.25); background: #fff;">
+                            <img src="formal_crop.JPG" alt="John Francis C. Villareal" style="display: block; margin: 0 auto; width: 120px; height: 120px; object-fit: cover; border-radius: 50%; border: 4px solid #ff9d00; box-shadow: 0 4px 16px rgba(0,0,0,0.25); background: #fff;">
                         </div>
                         <h3 class="head-name">John Francis C. Villareal</h3>
                         <p class="head-role">Logistics Head</p>
